stages/stage2/set4-metallb-traefik/k8s/networkpolicies/apps-allow-booking-app-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-booking-app-to-booking-db
  namespace: apollo-airlines-apps
spec:
  podSelector:
    matchLabels:
      app: booking-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: booking
      ports:
        - protocol: TCP
          port: 5432
