stages/stage2/set4-metallb-traefik/k8s/networkpolicies/apps-allow-flight-app-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-flight-app-to-flight-db
  namespace: apollo-airlines-apps
spec:
  podSelector:
    matchLabels:
      app: flight-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: flight
      ports:
        - protocol: TCP
          port: 5432
