stages/stage2/set4-metallb-traefik/k8s/networkpolicies/ui-00-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: apollo-airlines-ui
spec:
  podSelector: {}
  policyTypes:
    - Ingress
